syntax = "proto3";

import "google/protobuf/wrappers.proto";

package customProtoTypes;

option csharp_namespace = "OrderBook.Protos.CustomTypes";

message GuidValue {
  google.protobuf.StringValue value = 1;
}

